--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: backstage
+  name: fragmen7
   description: |
     Backstage is an open-source developer portal that puts the developer experience first.
   links:
@@ -18,6 +18,6 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     lighthouse.com/website-url: https://gonzalovazquez.ca
 spec:
-  type: library
+  type: website
   owner: CNCF
   lifecycle: experimental
