--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: development  # Specifies the environment to use
 
     steps:
     - uses: actions/checkout@v2
@@ -30,12 +31,12 @@ jobs:
         push: false
         tags: gonzalovazquez/fragment7:latest  # Change to your Docker Hub username/repository
 
-    - name: Configure AWS credentials
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:oidc-provider/token.actions.githubusercontent.com
+        aws-region: ${{ vars.AWS_REGION}}
+
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -47,9 +48,9 @@ jobs:
 
     - name: Tag Docker image
       run: |
-        docker tag gonzalovazquez/fragmen7:latest ${{ steps.login-ecr.outputs.registry }}/gonzalovazquez/fragmen7:latest
+        docker tag gonzalovazquez/fragmen7:latest ${{ vars.REGISTRY }}:latest
 
     - name: Publish Docker image to AWS ECR
       run: |
-        docker push ${{ steps.login-ecr.outputs.registry }}/gonzalovazquez/fragmen7:latest
+        docker push ${{ vars.REGISTRY }}:latest
 
