--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,18 @@ jobs:
     - name: Build Backstage app
       run: yarn run build:all
 
-    - name: Build Docker image
-      uses: docker/build-push-action@v2
+    -
+      # Setting up Docker Buildx with docker-container driver is required
+      # at the moment to be able to use a subdirectory with Git context
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    -
+      name: Build and push
+      uses: docker/build-push-action@v5
       with:
+        context: "{{defaultContext}}:packages/backend"
         push: false
-        tags: gonzalovazquez/fragment7:latest  # Change to your Docker Hub username/repository
+        tags: gonzalovazquez/fragment7:latest
   
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
