fix: 🐛 add correct builder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,17 @@ jobs:
     - name: Build Backstage app
       run: yarn run build:all
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    -
+
     -
       # Setting up Docker Buildx with docker-container driver is required
       # at the moment to be able to use a subdirectory with Git context
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    -
-      name: Build and push
+    
+    - name: Build and push
       uses: docker/build-push-action@v5
       with:
         context: "{{defaultContext}}:packages/backend"
