--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies with Yarn
       run: yarn install --frozen-lockfile
 
+    - name: Output type definition
+      run: yarn tsc
+
     - name: Build Backstage app
       run: yarn build:backend --config ../../app-config.yaml
 
