--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       run: yarn tsc
 
     - name: Build Backstage app
-      run: yarn build:backend --config ../../app-config.yaml
+      run: yarn build:all
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
