--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       run: yarn install
 
     - name: Build project
-      run: yarn build
+      run: yarn build:all
 
     - name: Login to Amazon ECR
       id: login-ecr
