--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,25 +28,28 @@ jobs:
     - name: Build project
       run: yarn build:all
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4 # More information on this action can be found below in the 'AWS Credentials' section
+      with:
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        aws-region: ${{ vars.AWS_REGION }}
+
     - name: Login to Amazon ECR
       id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-      with:
-        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }} # You may need to provide this if using a specific role
-        region: us-east-1
+      uses: aws-actions/amazon-ecr-login@v2
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: gonzalovazquez/fragmen7
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: gonzalovazquez/fragmen7
         IMAGE_TAG: latest
       run: |
         # Build your Docker image.
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
 
         # Push this image to Amazon ECR.
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
     - name: Verify pushed images
       run: |
-        aws ecr describe-images --repository-name $ECR_REPOSITORY --image-ids imageTag=$IMAGE_TAG
+        aws ecr describe-images --repository-name $REGISTRY --image-ids imageTag=$IMAGE_TAG
