--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         IMAGE_TAG: latest
       run: |
         # Build your Docker image.
-        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+        docker build . -f packages/backend/Dockerfile -t $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
         # Push this image to Amazon ECR.
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
