--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REGISTRY: public.ecr.aws/i2c1m6e4
         REPOSITORY: gonzalovazquez/fragmen7
         IMAGE_TAG: latest
       run: |
@@ -48,7 +48,7 @@ jobs:
         docker build . -f packages/backend/Dockerfile -t $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
         # Push this image to Amazon ECR.
-        docker push public.ecr.aws/i2c1m6e4/gonzalovazquez/fragmen7:$IMAGE_TAG
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
     - name: Verify pushed images
       run: |
